tests/golden/3-basic-and-simple-literals/valid/common/double-quoted-strings-w-inline-quotes-3.yini
// NOTE: Raw string doesn't support escapes, escape sequences will appear as-is!

^ StringsWithQuotes
double6 = "Hello \'World\'"
