tests/golden/3-basic-and-simple-literals/invalid/common/bad-single-quoted-strings-w-inline-quotes-2.yini
// NOTE: Default (raw) strings doesn't support escapes!

^ StringsWithQuotes
str2 = 'It\'s fine!'
